--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
+    compile 'com.google.android.gms:play-services-base:11.0.4'
+    compile 'com.google.firebase:firebase-messaging:11.0.4'
+    implementation 'com.google.code.gson:gson:2.8.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
