--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
-    compile 'com.google.android.gms:play-services-base:11.0.4'
-    compile 'com.google.firebase:firebase-messaging:11.0.4'
+    compile 'com.google.android.gms:play-services-base:11.2.0'
+    compile 'com.google.firebase:firebase-messaging:11.2.0'
+    compile 'com.google.firebase:firebase-database:11.2.0'
     implementation 'com.google.code.gson:gson:2.8.1'
 }
 
