--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.android.gms:play-services-maps:11.2.0'
+    implementation 'com.google.code.gson:gson:2.8.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
@@ -30,7 +32,9 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:11.2.0'
     compile 'com.google.android.gms:play-services-base:11.2.0'
     compile 'com.google.firebase:firebase-core:11.2.0'
-    implementation 'com.google.code.gson:gson:2.8.1'
+    compile 'com.android.support:cardview-v7:26.0.1'
+    compile 'com.android.support:recyclerview-v7:26.0.1'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
