--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.android.gms:play-services-maps:11.2.0'
+    implementation 'com.google.android.gms:play-services-location:11.2.0'
     implementation 'com.google.code.gson:gson:2.8.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
@@ -34,6 +35,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.2.0'
     compile 'com.android.support:cardview-v7:26.0.1'
     compile 'com.android.support:recyclerview-v7:26.0.1'
+    compile 'org.slf4j:slf4j-nop:1.7.25' //Google maps directions java api
 }
 
 
