--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.2.0'
     implementation 'com.google.android.gms:play-services-location:11.2.0'
     implementation 'com.google.code.gson:gson:2.8.1'
+    //    implementation 'org.slf4j:slf4j-nop:1.8.0-alpha2' //Google maps directions java api
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
@@ -35,7 +36,8 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.2.0'
     compile 'com.android.support:cardview-v7:26.0.1'
     compile 'com.android.support:recyclerview-v7:26.0.1'
-    compile 'org.slf4j:slf4j-nop:1.7.25' //Google maps directions java api
+    compile 'com.google.maps:google-maps-services:0.1.20'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
 }
 
 
