small update (gradle) and code clean

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:screenOrientation="portrait"/>
 
         <activity
-            android:name=".taskCardsMapView.TaskDetailsActivity"
+            android:name=".TaskDetailsActivity"
             android:label="@string/task_details"
             android:parentActivityName=".taskCardsMapView.TasksAndMapActivity"
             android:screenOrientation="portrait"
